# CP-ALGOS-DS

./: .gitignore  CMakeLists.txt  C_Medium_Design.cpp  CmakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cmake.yml
Adhoc/: debug_header.cpp  debug_template.cpp
Advanced Data Structures/2D Prefix sums/: prefix_sum_2d.cpp
Advanced Data Structures/Fenwick Trees/: count_inversions.cpp  fenwick.cpp  fenwick_PQRU.cpp  fenwick_PURQ.cpp  fenwick_PURQ_0based.cpp  fenwick_classic.cpp  fenwick_variant1.cpp
Advanced Data Structures/Segment Trees/: sum_segment_tree.cpp
Advanced Data Structures/Sparse Tables/: sparse_table.cpp
Advanced-Data-Structures/2D Prefix sums/: prefix_sum_2d.cpp
Advanced-Data-Structures/Fenwick Trees/: count_inversions.cpp  fenwick_PQRU.cpp  fenwick_PURQ.cpp
Advanced-Data-Structures/Merge-Sort-Tree/: merge_sort_tree.cpp
Advanced-Data-Structures/Segment Trees/: min_segment_tree.cpp
Advanced-Data-Structures/Segment-Tree/: basic_sum_segment_tree.cpp
Advanced-Data-Structures/Segment-Tree/segTree-with-node-structure/: generic_segTree_lazy_prop.cpp  max_segTree_lazy_prop.cpp  min_segTree_lazy_prop.cpp  sum_segTree_lazy_prop.cpp  xor_segTree_lazy_prop.cpp
Advanced-Data-Structures/Sparse-Table/: sparse_table.cpp
Combinatorics/: general.cpp
Graphs/: cycle_detect.cpp
Graphs/Directed/: Dijkstras.cpp  cycle_detect_directed.cpp
Graphs/Directed/Binary-Lifting/: binary_lifting.cpp  kth_ancestor.cpp
Graphs/Directed/Eulerian Graph/: eulerian_directed_map.cpp  eulerian_directed_vectors.cpp
Graphs/Directed/Kahns Algo/: kahns_algo.cpp
Graphs/Directed/Kosaraju SCC/: kosaraju_scc.cpp
Graphs/Undirected graph/DSU/: DSU.cpp
Graphs/Undirected graph/Eulerian graph/: eulerian_undirected.cpp
Graphs/Undirected/DSU/: dsu.cpp
Hashing/: hashing_utils.cpp
Number Theory/: binary_exp.cpp  modular_inverse.cpp  prime_sieve.cpp  sieve_factorization.cpp
Number-Theory/: binary_exp.cpp  factorization.cpp  modular_inverse.cpp  prime_sieve.cpp  sieve_factorization.cpp
Number-Theory/factorization/: log_factorization.cpp  sieve_factorization.cpp  sqrt_factorization.cpp
Sliding WIndow/: sliding_window_max.cpp
Sliding-Window/: sliding_window_max.cpp  sliding_window_min.cpp
Strings/: poly_hash.cpp
Strings/KMP/: CP_ALGOS_EXPLANATION.md  KMP.cpp
Strings/rabinkarp/: rabinkarp.cpp
Strings/z-function/: zfunc.cpp
Trees/: UnionFind.cpp
Trees/Rooting A Tree/: rooting_tree.cpp
Trees/Tries/: Tries.cpp  binary_trie.cpp  tries.cpp
tests/: Makefile  cycle_detect_directed.cpp  fenwick_PQRU.cpp  union_find.cpp
tests/Advanced-Data-Structures/: test_max_segTree_lazy_prop.cpp  test_merge_sort_tree.cpp  test_min_segTree_lazy_prop.cpp  test_sparse_table.cpp  test_sum_segTree_lazy_prop.cpp  test_xor_segTree_lazy_prop.cpp
tests/Combinatorics/: test_general.cpp
tests/Graphs/Directed/Binary-Lifting/: test_binary_lifting.cpp  test_kth_ancestor.cpp
tests/Graphs/Undirected/DSU/: test_dsu.cpp
tests/Number-Theory/: test_log_factorization.cpp  test_prime_sieve.cpp  test_sieve_factorization.cpp
tests/Strings/: test_poly_hash.cpp  test_rabinkarp.cpp
tests/Trees/Tries/: test_tries.cpp
tests/doctest/: main.cpp
